--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,8 @@
         "koa": "^2.14.2",
         "koa-body": "^6.0.1",
         "koa-logger": "^3.2.1",
+        "koa-mount": "^4.2.0",
+        "koa-static": "^5.0.0",
         "moment": "^2.29.4",
         "pino": "^8.16.2",
         "pino-pretty": "^10.2.3",
