--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
         "artplayer": "^5.2.1",
         "artplayer-plugin-danmuku": "^5.1.4",
         "flv.js": "^1.6.2",
+        "http-proxy-middleware": "^3.0.5",
         "install": "^0.13",
         "react-router-dom": "^6.3.0",
         "react-scripts": "^5.0.1",
